--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,29 @@
 {
-  "manifest_version": 2,
-
+  "manifest_version": 3,
   "name": "xkcdGEN",
   "description": "Generate strong passwords xkcd style.",
-  "icons": {
-      "128": "icon_128.png"
-   },
   "version": "0.1.8",
-
-  "browser_action": {
-    "default_icon": "icon_128.png",
+  "action": {
+    "default_icon": {
+      "128": "icon_128.png"
+    },
     "default_popup": "popup.html",
     "default_title": "xkcdGEN"
   }
 }
+//{
+//  "manifest_version": 2,
+//
+//  "name": "xkcdGEN",
+//  "description": "Generate strong passwords xkcd style.",
+//  "icons": {
+//      "128": "icon_128.png"
+//   },
+//  "version": "0.1.8",
+//
+//  "browser_action": {
+//    "default_icon": "icon_128.png",
+//    "default_popup": "popup.html",
+//    "default_title": "xkcdGEN"
+//  }
+//}
